--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
   <div class="wrapper">
     <h1 class="fuwat">メロスは激怒した。必ず、かの邪智暴虐の王を除かなければならぬと決意した。</h1>
 
-    <h2 class="fuwat">笛を吹き、羊と遊んで暮して来た。</h1>
+    <h2 class="fuwat">笛を吹き、羊と遊んで暮して来た。</h2>
+
+    <h3 class="fuwat">けれども邪悪に対しては、人一倍に敏感であった。</h3>
+
+    <h4 class="fuwat">きょう未明メロスは村を出発し、野を越え山越え、十里はなれた此このシラクスの市にやって来た。</h4>
   </div>
 
   <script>
