--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 
     <h3 class="fuwat">けれども邪悪に対しては、人一倍に敏感であった。</h3>
 
-    <h4 class="fuwat">きょう未明メロスは村を出発し、野を越え山越え、十里はなれた此このシラクスの市にやって来た。</h4>
+    <h4 class="fuwat2">きょう未明メロスは村を出発し、野を越え山越え、十里はなれた此このシラクスの市にやって来た。</h4>
   </div>
 
   <script>
   $(function(){
     setInterval($(".fuwat").fuwat({ "resetButton": true, fuwatComplete: function(){ console.log("complete!!!"); } }), 2000);
+    setInterval($(".fuwat2").fuwat({ "resetButton": true, fuwatComplete: function(){ console.log("complete!!!"); } }), 2000);
   });
   </script>
 </body>
