--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div class="wrapper">
     <h1 class="fuwat">メロスは激怒した。必ず、かの邪智暴虐の王を除かなければならぬと決意した。</h1>
 
-    <!-- <h1 class="fuwat">笛を吹き、羊と遊んで暮して来た。</h1> -->
+    <h2 class="fuwat">笛を吹き、羊と遊んで暮して来た。</h2>
+    
   </div>
 
   <script>
