--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.3.1/lodash.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="js/fuwat.js"></script>
 </head>
 <body>
   <div class="wrapper">
@@ -25,8 +25,8 @@
 
   <script>
   $(function(){
-    setInterval($(".fuwat").fuwat({ "resetButton": true, fuwatComplete: function(){ console.log("complete!!!"); } }), 2000);
-    setInterval($(".fuwat2").fuwat({ "resetButton": true, fuwatComplete: function(){ console.log("complete!!!"); } }), 2000);
+    $(".fuwat").fuwat({ fuwatComplete: function(){ console.log("complete!!!"); } });
+
   });
   </script>
 </body>
